# filbertGPT

./: .gitignore  README.md  pyproject.toml
filbertgpt/: config-template.yml  embedding.py  language_model.py  smith.py
filbertgpt/chain/: __init__.py  web_IE_chain.py
filbertgpt/memory/: __init__.py  conversation_memory.py  faiss_memory.py  pinecone_memory.py
filbertgpt/prompt/: __init__.py  common.py
filbertgpt/retriever/: __init__.py  faiss_retriever.py  pinecone_retriever.py  qdrant_retriever.py
filbertgpt/tool/: __init__.py
filbertgpt/utils/: config_loader.py  pydantic_utils.py
tests/unit_test/memory/: __init__.py  test_conversation_memory.py
